2007-07-31  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Test/TestDocumentBufferArchiver.cs: Minor whitespace change.
	* Test/TestUtils.cs, Monodoc.Editor.Gui.mdp: Added TestUtils.cs that is
	  a unit test for the helper classes in Utils.cs

2007-07-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBufferArchiver.cs, Utils.cs: Removed local definition of
	  TagEndsHere and now it references it from DocumentUtils. Moved
	  definitions of AddString and AddNewline.
	* DocumentUndoManager.cs: Added Buffer accesor.

2007-07-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* DocumentBuffer.cs: Minor Changes.

2007-07-24  Hector E. Gomez M. <hectoregm@gmail.com> 

	* Utils.cs, Monodoc.Editor.Gui.mdp: Added Utils.cs this will contain
	  any helper classes for the other Document* classes.
	* DocumentBuffer.cs: Some minor changes, using methods from
	  DocumentUtils, and using conditionals for debug printings.

2007-07-23  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBuffer.cs: Overrided OnInsertText default handler for
	  DocumentBuffer.

2007-07-21  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>

	* Monodoc.Editor.Gui/DocumentUndoManager.cs: Changed file name from
	  DocumentUndo.cs to DocumentUndoManager.cs
	* Monodoc.Editor.Gui/Monodoc.Editor.Gui.mdp: Added EditAction.cs and
	  DocumentUndo.cs source file.
	* Monodoc.Editor.Gui/EditAction.cs: Added interface EditAction that
	  establishes a contract for the mehtods any editing action that
	  takes place in the editor should implement, the important ones are
	  the undo and redo methods that help implement Undo and Redo to the
	  editor.
	* Monodoc.Editor.Gui/DocumentUndo.cs: Initial skeleton for the
	  implementation for undo and redo functionality in the editor. 

2007-07-19  Hector E. Gomez M. <hectoregm@gmail.com> 

	* DocumentBuffer.cs: Added more implementation for easy editing of
	  summary text.

2007-07-17  Hector E. Gomez M. <hectoregm@gmail.com> 
